welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.error
indexOfMaxValue:4: error: not found: value a
		if(nums(c) > a) {
                             ^