welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.code
def indexOfMaxValue(nums:Array[Int]):Int = {
	var p:Int = 0
	for(c <- 0 to nums.length - 1) {
		if(nums(c) > a) {
			p = c
		}
	}
	return p
}
